--- a/WebApplication3/Views/DataController1/Index.cshtml
+++ b/WebApplication3/Views/DataController1/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<WebApplication3.Models.ChartDataModel>
 
 @{
-    ViewData["Title"] = "Dataa";
+    ViewData["Title"] = "Data";
 }
+
 <!DOCTYPE html>
 
 <html>
@@ -14,6 +15,8 @@
     <p>
         <a asp-action="Create">Create New</a>
     </p>
+
+    <p>> </p>
     <table class="table">
         <thead>
             <tr>
