--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -1,7 +1,24 @@
-﻿
+﻿@using WebApplication3.Data;
+@using WebApplication3.Models;
 @{
     ViewData["Title"] = "Dashboard";
     Layout = "_Adminlte";
+}
+
+@{
+    List<ChartDataModel> data = new();
+    GadgetDAO datatable = new();
+    string roomtemp1;
+    string combinedstring = "";
+
+    data = datatable.Fatchall();
+    foreach (var datta in data)
+    {
+        roomtemp1 = datta.roomtemp1.ToString();
+        combinedstring = string.Join(combinedstring, roomtemp1);
+    }
+
+
 }
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -11,6 +28,7 @@
             <small>Control panel</small>
         </h1>
         <ol class="breadcrumb"></ol>
+        <span>test data =@combinedstring </span>
     </section>
     <!-- Main content -->
     <section class="content">
@@ -18,13 +36,7 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="info-box">
-                    <span class="info-box-icon bg-aqua"><i class="ion ion-ios-speedometer-outline"></i></span>
-                    <div class="info-box-content">
-                        <span class="info-box-number">Location 1</span>
-                        <span class="info-box-text">Temperature = 10</span>
-                        <span class="info-box-text">Humidity = 100</span>
-                        @*<span class="info-box-text">avg = 100</span>*@
-                    </div>
+                    <div id="gauge" class="100x60px"></div>
                     <!-- /.info-box-content -->
                 </div>
                 <!-- /.info-box -->
@@ -72,9 +84,9 @@
             <!-- /.col -->
         </div>
         @*<div class="demo-container">
-            <div id="placeholder" class="demo-placeholder" style="float:left; width:375px;"></div>
-            <p id="choices" style="float:right; width:100px;"></p>
-        </div>*@
+                <div id="placeholder" class="demo-placeholder" style="float:left; width:375px;"></div>
+                <p id="choices" style="float:right; width:100px;"></p>
+            </div>*@
         <!-- /.row -->
         <div class="row">
             <!-- Left col -->
@@ -139,6 +151,7 @@
 @section Scripts{
 
     <script src="~/adminlte/components/Justgage/raphael-2.1.4.min.js"></script>
+
     <script src="~/adminlte/components/Justgage/justgage.js"></script>
 
     <script src="~/adminlte/components/jquery/dist/jquery.min.js"></script>
@@ -148,21 +161,6 @@
     <script>$.widget.bridge('uibutton', $.ui.button);</script>
     <!-- Bootstrap 3.3.7 -->
     <script src="~/adminlte/components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- Morris.js charts -->
-    <script src="~/adminlte/components/raphael/raphael.min.js"></script>
-    <script src="~/adminlte/components/morris.js/morris.min.js"></script>
-    <!-- Sparkline -->
-    <script src="~/adminlte/components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
-    <!-- jvectormap -->
-    <script src="~/adminlte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="~/adminlte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    <!-- jQuery Knob Chart -->
-    <script src="~/adminlte/components/jquery-knob/dist/jquery.knob.min.js"></script>
-    <!-- daterangepicker -->
-    <script src="~/adminlte/components/moment/min/moment.min.js"></script>
-    <script src="~/adminlte/components/bootstrap-daterangepicker/daterangepicker.js"></script>
-    <!-- datepicker -->
-    <script src="~/adminlte/components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <!-- Bootstrap WYSIHTML5 -->
     <script src="~/adminlte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
     <!-- Slimscroll -->
@@ -173,17 +171,22 @@
     <script src="~/adminlte/components/Flot/jquery.flot.js"></script>
     <!-- FLOT RESIZE PLUGIN - allows the chart to redraw when the window is resized -->
     <script src="~/adminlte/components/Flot/jquery.flot.resize.js"></script>
-    <!-- FLOT PIE PLUGIN - also used to draw donut charts -->
-    <script src="~/adminlte/components/Flot/jquery.flot.pie.js"></script>
-    <!-- FLOT CATEGORIES PLUGIN - Used to draw bar charts -->
-    <script src="~/adminlte/components/Flot/jquery.flot.categories.js"></script>
     <!-- FastClick -->
     <script src="~/adminlte/components/fastclick/lib/fastclick.js"></script>
     <!-- AdminLTE App -->
     <script src="~/adminlte/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="~/adminlte/dist/js/demo.js"></script>
     <!-- Page script -->
     <script src="~/adminlte/components/Flot/FlotLegend.js"></script>
-    
+
+    <script>
+        var temp = @Html.Raw(Json.Serialize(combinedstring));
+        var g = new JustGage({
+            id: "gauge",
+            value: temp ,
+            min: 0,
+            max: 100,
+            title: "Room AVG Temp"
+        });
+    </script>
+
 }
