--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -1,10 +1,7 @@
-﻿using Microsoft.AspNetCore.Identity;
+﻿@using Microsoft.AspNetCore.Identity;
 
 
 <!DOCTYPE html>
-@*@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager*@
-@*@{ ApplicationUser signedUser = await UserManager.GetUserAsync(User); }*@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -30,13 +27,54 @@
             @RenderBody()
         </main>
     </div>
+    <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
+    <script type="text/javascript">
+        $(function () {
 
+            // Proxy created on the fly
+            var cus = $.connection.cusHub;
+
+            // Declare a function on the job hub so the server can invoke it
+            cus.client.displayCustomer = function () {
+                getData();
+            };
+
+            // Start the connection
+            $.connection.hub.start();
+            getData();
+        });
+
+        function getData() {
+            var $tbl = $('#tblInfo');
+            $.ajax({
+                url: $("#Get").val(),
+                type: 'GET',
+                datatype: 'json',
+                success: function (data) {
+                    $tbl.empty();
+
+                    $.each(data.listCus, function (i, model) {
+                        $tbl.append
+                            (
+                                '<tr>' +
+                                '<td>' + model.Id + '</td>' +
+                                '<td>' + model.CusId + '</td>' +
+                                '<td>' + model.CusName + '</td>' +
+                                '<tr>'
+                            );
+                    });
+                }
+            });
+        }
+
+    </script>
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <!--jqueryUI-->
         <script src="~/lib/jquery-ui-1.12.1/jquery-ui.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
