--- a/WebApplication3/Views/Account/Login.cshtml
+++ b/WebApplication3/Views/Account/Login.cshtml
@@ -2,7 +2,6 @@
 @using System.Linq
 @using Microsoft.AspNetCore.Http
 @*@using Microsoft.AspNetCore.Http.Authenti*@
-@model LoginViewModel
 @{ Layout = null; }
 
 <!DOCTYPE html>
@@ -26,19 +25,13 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/adminlte/dist/css/skins/_all-skins.min.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <!-- Google Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/googlefont.css">
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>Shimano</b></a>
+            <a href="#"><b>Login</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
@@ -50,7 +43,7 @@
                     <span class="glyphicon glyphicon-user form-control-feedback"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    <label> <i class=" fa fa-user-lock"> Password </i></label>
+                    <label> <i class=" fa fa-lock"></i> Password </label>
                     <input name="Password" type="password" class="form-control" placeholder="Password" />
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                 </div>
