--- a/WebApplication3/Views/Account/Register.cshtml
+++ b/WebApplication3/Views/Account/Register.cshtml
@@ -23,19 +23,13 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/adminlte/dist/css/skins/_all-skins.min.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <!-- Google Font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+
+    <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/googlefont.css">
 </head>
 <body class="hold-transition register-page">
     <div class="register-box">
         <div class="register-logo">
-            <a href="#"><b>Admin</b>LTE</a>
+            <a href="#"><b>Register</b></a>
         </div>
         <div class="register-box-body">
             <p class="login-box-msg">Register a new membership</p>
@@ -61,7 +55,7 @@
                 </div>
             </form>
            
-            <a href="~/home/login" class="text-center">I already have a membership</a>
+            <a href="/Account/login" class="text-center">I already have a membership</a>
         </div>
         <!-- /.form-box -->
     </div>
