--- a/WebApplication3/Views/Home/History.cshtml
+++ b/WebApplication3/Views/Home/History.cshtml
@@ -1,7 +1,5 @@
-﻿@{
-    ViewData["Title"] = "History";
-    Layout = "_Adminlte";
-}
+﻿@{ ViewData["Title"] = "History";
+                Layout = "_Adminlte"; }
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
@@ -158,15 +156,9 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/adminlte/dist/css/skins/_all-skins.min.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <!-- Google Font -->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+
+    <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/googlefont.css">
+
 }
 
 
