--- a/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@using WebApplication3.Data;
-@using WebApplication3.Models;
+@*@model WebApplication3.Models.Config;*@
+@using Microsoft.AspNetCore.Http;
+@model IEnumerable<WebApplication3.Models.Config>
 @{ ViewData["Title"] = "Dashboard";
     Layout = "_Adminlte"; }
 
@@ -8,37 +10,51 @@
     <section class="content-header">
         <h1>
             Dashboard
-            <small>Control panel</small>
         </h1>
-        
     </section>
     <!-- Main content -->
     <section class="content">
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12">
-                <div class="box box-solid">
-                    <div id="roomtempgauge">
-                        <div id="roomhumidgauge"></div>
-                    </div>
+                <div class="box box-primary gridtwobytwo">
+                    <h2 class="gaugepos"> Room </h2>
+                    <div class="loc1" id="roomtempgauge"></div>
+                    <div class="loc3" id="roomhumidgauge"></div>
                     
+                    <div class="bi bi-droplet-half infoatribute2" style="font-size:35px; top:77px; left: 36px;"></div>
+                    @*<div class="bi bi-caret-up-fill infoatribute2" style="font-size: 20px; top: 35px; left: 40px;"></div>
+                    <div class="bi bi-caret-down-fill infoatribute2" style=" font-size: 20px; top: 50px; left: 40px;"></div>*@
+                    <div class="bi bi-percent infoatribute2" style="font-size: 20px; top: 44px; left: 219px;"></div>
+                    
+                    @foreach (var item in Model)
+                    {
+                        <div class="bi bi-thermometer-half infoatribute1" style="font-size:35px; top:77px; left: 36px;"></div>
+                        <div class="bi bi-caret-up-fill infoatribute1" style="font-size: 20px; top: 30px; left: 40px;"><small>: @Html.DisplayFor(modelItem => item.hitemproom)</small></div>
+                        <div class="bi bi-caret-down-fill infoatribute1" style=" font-size: 20px; top: 50px; left: 40px;"><small>: @Html.DisplayFor(modelItem => item.lowtemproom)</small></div>
+                        <div class="infoatribute1" style="font-size: 20px; top: 45px; left: 218px;">°C</div>
+                    }
+
                 </div>
                 <!-- /.info-box -->
             </div>
-            <!--<div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="box box-solid">
-                    <div id="roomhumidgauge"></div>
-                </div>-->
-                <!-- /.info-box -->
-            <!--</div>-->
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="box box-solid">
-                    <div id="mchinetempgauge"></div>
-                </div>
-                <!-- /.info-box -->
-            </div>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-                <div class="box box-solid">
-                    <div id="mchinehumidgauge"></div>
+            <div class="col-md-6 col-sm-12 col-xs-12">
+                <div class="box box-primary gridtwobytwo">
+                    <h2 class="gaugepos"> Machine </h2>
+                    <div class="loc1" id="mchinetempgauge"></div>
+                    <div class="loc3" id="mchinehumidgauge"></div>
+                    
+                    <div class="bi bi-droplet-half infoatribute2" style="font-size:35px; top:77px; left: 36px;"></div>
+                    @*<div class="bi bi-caret-up-fill infoatribute2" style="font-size: 20px; top: 35px; left: 40px;"></div>
+                    <div class="bi bi-caret-down-fill infoatribute2" style=" font-size: 20px; top: 50px; left: 40px;"></div>*@
+                    <div class="bi bi-percent infoatribute2" style="font-size: 20px; top: 44px; left: 219px;"></div>
+                    
+                    @foreach (var item in Model)
+                    {
+                        <div class="bi bi-thermometer-half infoatribute1" style="font-size:35px; top:77px; left: 36px;"></div>
+                        <div class="bi bi-caret-up-fill infoatribute1" style="font-size: 20px; top: 30px; left: 40px;"><small>: @Html.DisplayFor(modelItem => item.hitempmachine)</small></div>
+                        <div class="bi bi-caret-down-fill infoatribute1" style=" font-size: 20px; top: 50px; left: 40px;"><small>: @Html.DisplayFor(modelItem => item.lowtempmachine)</small></div>
+                        <div class="infoatribute1" style="font-size: 20px; top: 45px; left: 215px;">°C</div>
+                    }
                 </div>
                 <!-- /.info-box -->
             </div>
@@ -56,7 +72,7 @@
                         </h3>
                         <div class="box-tools pull-right">
                             <p>  </p>
-                            <p>Update Interval: <input id="updateInterval" type="text" value="" style="text-align: right; width:3em" /> ms</p>
+                            <p>@*Update Interval: <input id="updateInterval" type="text" value="" style="text-align: right; width:3em" /> ms*@</p>
                         </div>
                     </div>
                     <div class="box-body">
@@ -78,7 +94,7 @@
                         </h3>
                     </div>
                     <div class="box-body bodygrid">
-                        <img class="loc2" src="~/images/map.png" style="height: 350px;">
+                        <img class="map" src="~/images/map.png" style="height: 350px;">
                         <div class="box box-solid box-default loc2 pos1" style="height:80px; width:140px">
                             <div class="box-header with-border">
                                 <i class="fa fa-map-marker"></i>
@@ -117,7 +133,6 @@
                             <div class="box-body" style="font-size: medium;">
                                 <i class="bi bi-thermometer" id="loc4temp"></i>
                                 <i class="bi bi-droplet-half" id="loc4humid"></i>
-                                <span class="D7" ></span>
                             </div>
                         </div>
                     </div>
@@ -143,28 +158,62 @@
             font-size: small;
         }
 
+        .gaugepos {
+            grid-column: 1 / 3;
+            grid-row: 1 / 3;
+            margin: 0 auto;
+            font-family: 'Berlin Sans FB';
+            text-align: center;
+            color: grey;
+            position: relative;
+            left: 0px;
+            top: 10px;
+        }
+
+        .infoatribute2 {
+            grid-column: 2;
+            grid-row: 1 / 3;
+            color: grey;
+            position: relative;
+        }
+
+        .infoatribute1 {
+            grid-column: 1;
+            grid-row: 1 / 3;
+            color: grey;
+            position: relative;
+        }
+
         .loc1 {
             grid-column: 1;
             grid-row: 1;
-            z-index: 3;
+            margin: 0 auto;
         }
+
         .loc2 {
             grid-column: 1 / 4;
             grid-row: 1 / 3;
-            z-index: 3;
         }
+
         .loc3 {
-            grid-column: 3;
+            grid-column: 2;
             grid-row: 1;
-            z-index: 3;
+            margin: 0 auto;
         }
+
         .loc4 {
             grid-column: 1 / 4;
             grid-row: 2;
-            z-index: 3;
         }
+
+        .map {
+            grid-column: 1 / 4;
+            grid-row: 1 / 3;
+            margin: 0 auto;
+        }
+
         .loc1, .loc2, .loc3, .loc4 {
-            opacity: 0.75;
+            z-index: 2;
         }
 
         .bodygrid {
@@ -174,24 +223,37 @@
             grid-auto-rows: minmax(auto, auto);
         }
 
+        .gridtwobytwo {
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-row: auto;
+            grid-column-gap: 10px;
+        }
+
         .pos1 {
             top: 0px;
-            left: 45px;
+            left: 0px;
         }
+
         .pos2 {
             top: 85px;
-            left: 125px;
-            
+            left: 60px;
         }
+
         .pos3 {
             top: 180px;
-            left: 125px;
+            left: 60px;
         }
+
         .pos4 {
             top: 15px;
-            left: 45px;
+            left: 0px;
         }
-        
+
+        .pos1, .pos2, .pos3, .pos4 {
+            margin: 0 auto;
+            opacity: 0.75;
+        }
     </style>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -204,6 +266,8 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="~/adminlte/components/font-awesome/css/googlefont.css">
+
     <link rel="stylesheet" href="~/css/font/bootstrap-icons.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="~/adminlte/components/Ionicons/css/ionicons.min.css">
@@ -212,15 +276,6 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="~/adminlte/dist/css/skins/_all-skins.min.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <!-- Google Font -->
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 }
 
 
