--- a/WebApplication3/Views/Shared/_AdminlteMainHeader.cshtml
+++ b/WebApplication3/Views/Shared/_AdminlteMainHeader.cshtml
@@ -1,4 +1,5 @@
-﻿<header class="main-header">
+﻿@using Microsoft.AspNetCore.Http;
+<header class="main-header">
     <!-- Logo -->
     <a href="@WebApplication3.MVC.Pages.HomeIndex.Url" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
@@ -8,7 +9,7 @@
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
-         @*Sidebar toggle button*@
+        @*Sidebar toggle button*@
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
             <span class="sr-only">Toggle navigation</span>
         </a>
@@ -18,33 +19,29 @@
                 <li class="dropdown user user-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="~/images/empty_profile.png" class="user-image" alt="User Image">
-                        <span class="hidden-xs">Admin</span>
+                        <span class="hidden-xs">@Context.Session.GetString("username")</span>
                     </a>
                     <ul class="dropdown-menu">
                         <!-- User image -->
                         <li class="user-header">
                             <img src="~/images/empty_profile.png" class="img-circle" alt="User Image">
                             <p>
-                                irga julian - Web Developer
-                                <small>Member since Nov. 2021</small>
+                                @Context.Session.GetString("username")
+                                <small><br/>Information</small>
                             </p>
                         </li>
-                       
+
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                <a href="#" class="btn btn-default btn-flat">Log out</a>
                             </div>
                             <div class="pull-right">
-                                <a href="~/Account/login" class="btn btn-default btn-flat">Sign out</a>
+                                <a href="~/Account/login" class="btn btn-default btn-flat">Log in</a>
                             </div>
                         </li>
                     </ul>
                 </li>
-                <!-- Control Sidebar Toggle Button -->
-                <!--<li>
-                    <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-                </li>-->
             </ul>
         </div>
     </nav>
