--- a/WebApplication3/Views/History/Index.cshtml
+++ b/WebApplication3/Views/History/Index.cshtml
@@ -34,7 +34,7 @@
                                                 <div class="input-group-addon">
                                                     <i class="fa fa-calendar"></i>
                                                 </div>
-                                                <input name="Range" type="text" class="form-control pull-right" id="datepicker">
+                                                <input name="Day" type="text" class="form-control pull-right" id="datepicker">
                                             </div>
                                             <!-- /.input group -->
                                         </div>
