--- a/WebApplication3/Views/Shared/_AdminlteMainSidebar.cshtml
+++ b/WebApplication3/Views/Shared/_AdminlteMainSidebar.cshtml
@@ -31,7 +31,7 @@
             </li>
             <li class="@Html.IsSelected(actions: "History")">
 
-                <a href="#"> 
+                <a href="~/History/History"> 
                     <i class="fa fa-history"></i> <span>History<br/>(under develop)</span>
                 </a>
             </li>
