--- a/WebApplication3/Views/History/History.cshtml
+++ b/WebApplication3/Views/History/History.cshtml
@@ -3,104 +3,82 @@
 @{ ViewData["Title"] = "History";
     Layout = "_Adminlte"; }
 
-@{ //int a = 0;
-    string[] dataset = { };
-    int count = Model.Count();
-    int[,] array2D = new int[,] { };
-    string[,] array2Dd = new string[count, 2];
-    string[] newdata = { };
-    var a = -1;
-    foreach (var item in Model)
-    {
-        a++;
-        string nnewdata = String.Format("{0},{1}", item.Time, item.RoomHumid1);
-        //Array.Resize(ref array2D, array2D.Length + 1);
-        array2Dd[a, 0] = String.Format("{0}",a);
-        array2Dd[a, 1] = item.RoomHumid1;
-        //array2Dd[1, 1] = "b";
+@{ int count = Model.Count();
+                string[,] roomtemp1 = new string[count, 2];
+                string[,] roomhumid1 = new string[count, 2];
+                string[,] roomtemp2 = new string[count, 2];
+                string[,] roomhumid2 = new string[count, 2];
+                string[,] mchntemp1 = new string[count, 2];
+                string[,] mchnhumid1 = new string[count, 2];
+                string[,] mchntemp2 = new string[count, 2];
+                string[,] mchnhumid2 = new string[count, 2];
+                int a = -1;
+                foreach (var item in Model)
+                {
+                    a++;
+                    roomtemp1[a, 0] = item.Time;
+                    roomtemp1[a, 1] = item.RoomTemp1;
+                    roomhumid1[a, 0] = item.Time;
+                    roomhumid1[a, 1] = item.RoomHumid1;
+                    roomtemp2[a, 0] = item.Time;
+                    roomtemp2[a, 1] = item.RoomTemp2;
+                    roomhumid2[a, 0] = item.Time;
+                    roomhumid2[a, 1] = item.RoomHumid2;
 
-    }
-    //Console.WriteLine(dataset); }
+                    mchntemp1[a, 0] = item.Time;
+                    mchntemp1[a, 1] = item.MachineTemp1;
+                    mchnhumid1[a, 0] = item.Time;
+                    mchnhumid1[a, 1] = item.MachineHumid1;
+                    mchntemp2[a, 0] = item.Time;
+                    mchntemp2[a, 1] = item.MachineTemp2;
+                    mchnhumid2[a, 0] = item.Time;
+                    mchnhumid2[a, 1] = item.MachineHumid2;
+
+                }
+
 }
 
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
     <section class="content-header">
         <h1>
-            Dashboard
+            History
             <small>Control panel</small>
         </h1>
         <ol class="breadcrumb"></ol>
     </section>
-    <!-- Main content -->
+
     <section class="content">
-        <!-- /.row -->
         <div class="row">
-            <section class="col-lg-6">
+            <section class="col-lg-3">
                 <form action="History" method="post">
-                    <div class="col-lg-6">
                         <div class="box box-primary">
                             <div class="box-header">
                                 <h3 class="box-title">Date picker</h3>
                             </div>
                             <div class="box-body">
-                                <!-- Date -->
                                 <div class="form-group">
-                                    <label>Date:</label>
-                                    <div class="input-group date">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-calendar"></i>
-                                        </div>
-                                        <input name="Range" type="text" class="form-control pull-right" id="datepicker">
-                                    </div>
-                                    <!-- /.input group -->
+                                    <label>Select Disabled</label>
+                                    <select class="form-control" name="Range">
+                                        <option value="daily">Day</option>
+                                        <option value="Monthly">Month</option>
+                                        <option value="opel">Opel</option>
+                                        <option value="audi">Audi</option>
+                                    </select>
                                 </div>
-                                <!-- /.form group -->
-                                <!-- Date range -->
                                 <div class="form-group">
                                     <label>Date range:</label>
                                     <div class="input-group">
                                         <div class="input-group-addon">
                                             <i class="fa fa-calendar"></i>
                                         </div>
-                                        <input type="text" class="form-control pull-right" id="reservation">
-                                    </div>
-                                    <!-- /.input group -->
-                                </div>
-                                <!-- /.form group -->
-                                <!-- Date and time range -->
-                                <div class="form-group">
-                                    <label>Date and time range:</label>
-                                    <div class="input-group">
-                                        <div class="input-group-addon">
-                                            <i class="fa fa-clock-o"></i>
-                                        </div>
-                                        <input type="text" class="form-control pull-right" id="reservationtime">
-                                    </div>
-                                    <!-- /.input group -->
-                                </div>
-                                <!-- /.form group -->
-                                <!-- Date and time range -->
-                                <div class="form-group">
-                                    <label>Date range button:</label>
-                                    <div class="input-group">
-                                        <button type="button" class="btn btn-default pull-right" id="daterange-btn">
-                                            <span>
-                                                <i class="fa fa-calendar"></i> Date range picker
-                                            </span>
-                                            <i class="fa fa-caret-down"></i>
-                                        </button>
+                                        <input name="Day" type="text" class="form-control pull-right" id="reservation">
                                     </div>
                                 </div>
-                                <div class="col-xs-4">
+                                <div class="col-lg-3">
                                     <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
                                 </div>
-                                <!-- /.form group -->
                             </div>
-                            <!-- /.box-body -->
                         </div>
-                    </div>
-                    <!-- /.box -->
                 </form>
             </section>
         </div>
@@ -137,7 +115,7 @@
         }
 
         .cbgraph {
-            top: 45px;
+            top: 36px;
             left: 55px;
             font-size: small;
         }
@@ -269,7 +247,6 @@
 
 }
 
-
 @section Scripts{
     <!-- jQuery 3 -->
     <script src="~/adminlte/components/jquery/dist/jquery.min.js"></script>
@@ -290,11 +267,7 @@
     <script src="~/adminlte/components/morris.js/morris.min.js"></script>
     <!-- Sparkline -->
     <script src="~/adminlte/components/jquery-sparkline/dist/jquery.sparkline.min.js"></script>
-    <!-- jvectormap -->
-    <script src="~/adminlte/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
-    <script src="~/adminlte/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    <!-- jQuery Knob Chart -->
-    <script src="~/adminlte/components/jquery-knob/dist/jquery.knob.min.js"></script>
+    
     <!-- Bootstrap WYSIHTML5 -->
     <script src="~/adminlte/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
     <!-- Slimscroll -->
@@ -303,12 +276,10 @@
     <script src="~/adminlte/components/chart.js/Chart.js"></script>
     <!-- FLOT CHARTS -->
     <script src="~/adminlte/components/Flot/jquery.flot.js"></script>
+
+    <script src="~/adminlte/components/Flot/jquery.flot.time.js"></script>
     <!-- FLOT RESIZE PLUGIN - allows the chart to redraw when the window is resized -->
     <script src="~/adminlte/components/Flot/jquery.flot.resize.js"></script>
-    <!-- FLOT PIE PLUGIN - also used to draw donut charts -->
-    <script src="~/adminlte/components/Flot/jquery.flot.pie.js"></script>
-    <!-- FLOT CATEGORIES PLUGIN - Used to draw bar charts -->
-    <script src="~/adminlte/components/Flot/jquery.flot.categories.js"></script>
     <!-- date-range-picker -->
     <script src="~/adminlte/components/moment/min/moment.min.js"></script>
     <script src="~/adminlte/components/bootstrap-daterangepicker/daterangepicker.js"></script>
@@ -325,13 +296,18 @@
 
     @*<script src="~/js/Dashboard2.js"></script>*@
 
-
-    <!-- Page script -->
     <script>
         //Initialize Select2 Elements
         $('.select2').select2()
         //Date range picker
-        $('#reservation').daterangepicker()
+        $('#reservation').daterangepicker(
+            {
+                
+            })
+
+        $('input[name="Day"]').on('apply.daterangepicker', function (ev, picker) {
+            $(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
+        });
         //Date range picker with time picker
         $('#reservationtime').daterangepicker({ timePicker: true, timePickerIncrement: 30, format: 'MM/DD/YYYY h:mm A' })
         //Date range as a button
@@ -343,19 +319,20 @@
                     'Last 7 Days': [moment().subtract(6, 'days'), moment()],
                     'Last 30 Days': [moment().subtract(29, 'days'), moment()],
                     'This Month': [moment().startOf('month'), moment().endOf('month')],
-                    'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
                 },
                 startDate: moment().subtract(29, 'days'),
                 endDate: moment()
             },
             function (start, end) {
-                $('#daterange-btn span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'))
+                $('#daterange-btn span').html(start.format('DD/MM/YYYY') + ' - ' + end.format('DD/MM/YYYY'))
+               //document.getElementById("dayrange").innerHTML = (start.format('DD/MM/YYYY') + ' - ' + end.format('DD/MM/YYYY'))
             }
         )
 
         //Date picker
         $('#datepicker').datepicker({
-            autoclose: true
+            autoclose: true,
+            format: 'dd/mm/yyyy'
         })
 
 
@@ -367,49 +344,56 @@
         }</script>
 
     <script>
-        var abc = @Html.Raw(JsonConvert.SerializeObject(array2Dd[0,1]));
-        var abcd = @Html.Raw(JsonConvert.SerializeObject(array2Dd));
-           document.getElementById("datepicker").innerText = abc;
-            var datasets = {
+        var rh1 = @Html.Raw(JsonConvert.SerializeObject(roomhumid1));
+        var rt1 = @Html.Raw(JsonConvert.SerializeObject(roomtemp1));
+        var rh2 = @Html.Raw(JsonConvert.SerializeObject(roomhumid2));
+        var rt2 = @Html.Raw(JsonConvert.SerializeObject(roomtemp2));
+
+        var mh1 = @Html.Raw(JsonConvert.SerializeObject(mchnhumid1));
+        var mt1 = @Html.Raw(JsonConvert.SerializeObject(mchntemp1));
+        var mh2 = @Html.Raw(JsonConvert.SerializeObject(mchnhumid2));
+        var mt2 = @Html.Raw(JsonConvert.SerializeObject(mchntemp2));
+
+        var datasets = {
             "machine temp 1": {
                 label: "Machine temp 1",
-                data: [[0, 0], [1, 1]]
+                data: mt1
             },
             "machine temp 2": {
                 label: "Machine temp 2",
-                data: [abc]
+                data: mt2
             },
-            //"room temp 1": {
-            //    label: "Room temp 1",
-            //    data: []
-            //},
-            //"room temp 2": {
-            //    label: "Room temp 2",
-            //    data: []
-            //},
-            //"machine humid 1": {
-            //    label: "Machine humid 1",
-            //    data: []
-            //},
-            //"machine humid 2": {
-            //    label: "Machine humid 2",
-            //    data: []
-            //},
-            //"room humid 1": {
-            //    label: "Room humid 1",
-            //    data: []
-            //},
-            //"room humid 2": {
-            //    label: "Room humid 2",
-            //    data: []
-            //}
-        };
-        var i = 0;
+            "room temp 1": {
+                label: "Room temp 1",
+                data: rt1
+            },
+            "room temp 2": {
+                label: "Room temp 2",
+                data: rt2
+            },
+            "machine humid 1": {
+                label: "Machine humid 1",
+                data: mh1
+            },
+            "machine humid 2": {
+                label: "Machine humid 2",
+                data: mh2
+            },
+            "room humid 1": {
+                label: "Room humid 1",
+                data: rh1
+            },
+            "room humid 2": {
+                label: "Room humid 2",
+                data: rh2
+            }
+    };
+    var i = 0;
         $.each(datasets, function (key, val) {
             val.color = i;
             ++i;
         });
-        var choiceContainer = $("#choices");
+    var choiceContainer = $("#choices");
         $.each(datasets, function (key, val) {
             choiceContainer.append("<input type='checkbox' name='" + key +
                 "' checked='checked' id='id" + key + "'></input>" +
@@ -417,8 +401,8 @@
                 + val.label + "</label>");
         });
 
-        choiceContainer.find("input").click(plotAccordingToChoices);
-
+    choiceContainer.find("input").click(plotAccordingToChoices);
+        plotAccordingToChoices()
         function plotAccordingToChoices() {
 
             var data = [];
@@ -433,10 +417,15 @@
             if (data.length > 0) {
                 $.plot("#placeholder", data, {
                     yaxis: {
-                        min: 0
+                        min: 0,
+                        max: 100
                     },
                     xaxis: {
-                        min: 0
+                        mode: "time",
+                        timezone: "browser",
+                        timeformat: '%H:%M:%S:%d',
+                        tickDecimals: 4,
+
                     }
                 });
             }
